[tool.poetry]
name = "unit-convertor"
version = "0.1.0"
description = "A unit conversion web app"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [
    { include = "unit_convertor" }
]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.29.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
